[package]
name = "pd-vm-compat-frontends"
version = "0.1.0"
edition = "2024"
description = "JavaScript and Lua compatibility frontends for pd-vm"
license = "MIT"
repository = "https://github.com/rustscript-lang/rustscript-compat-frontends"
homepage = "https://rustscript.org"

[lib]
name = "pd_vm_compat_frontends"

[[bin]]
name = "pd-vm-compat-run"
path = "src/bin/pd-vm-compat-run.rs"

[dependencies]
pd-vm = { path = "../rustscript", version = ">=0.1.0" }

[dev-dependencies]
pd-vm = { path = "../rustscript", version = ">=0.1.0" }
